RESOLVED FIXED296908
[Flex][Baseline Alignment] Fix flexbox-align-self-vert-rtl-* tests
https://bugs.webkit.org/show_bug.cgi?id=296908
Summary [Flex][Baseline Alignment] Fix flexbox-align-self-vert-rtl-* tests
Sammy Gill
Reported 2025-08-04 17:24:22 PDT
These tests are currently failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-04 17:24:31 PDT
Sammy Gill
Comment 2 2025-08-04 17:28:12 PDT
EWS
Comment 3 2025-08-13 18:10:59 PDT
Committed 298667@main (25f1db8380ce): <https://commits.webkit.org/298667@main> Reviewed commits have been landed. Closing PR #48932 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.